#1067 Added make-base-entities
git-svn-id: svn://svn.opentaps.org/opentaps_all/branches/ofbiz-0904-1.4.0-preview1@13005 d3523486-f5fe-0310-a41a-a15a4e76f3c7